test/errors/base_types_error/zs/bitfield64_error.zs
package bitfield64_error;

struct WrongBitfield
{
    bit<64> wrong;
};
